--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <nav>
      <ul>
        <li>HOME</li>
-       <li>ABOUT</li>
+      <li><a href="https://ask134.github.io/sf_hack_rs/about">ABOUT</a></li>
        <li>EVENTS</li>
      </ul>
    </nav>
